<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="10dp"
    android:padding="10dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/phone_user_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_94_321_432_1243"
                android:layout_marginStart="50dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/address_user_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beach_road_matara"
                android:layout_marginStart="30dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beds"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/beds_user_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:layout_marginStart="60dp"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>